fixed spacing for contact and bio page

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h1{
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin: 5px 20px 0 20px;
+    
 }
 /* Selects spacing of content in box class */
 .container .box{
